Another set of changes implemented